--- a/core/templates/core/project_list.html
+++ b/core/templates/core/project_list.html
@@ -30,7 +30,7 @@ List of Projects
                     {{project.get_libraries|length}}
                     </td>
                     <td>
-                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:project_update' pk=project.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;" "></i> edit</a>
+                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:project_update' pk=project.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange"></i>edit</a>
                         <a href="{% url 'core:project_delete' pk=project.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a></p>
                     </td>
                 </tr>
