--- a/core/templates/core/summary.html
+++ b/core/templates/core/summary.html
@@ -80,7 +80,7 @@ Summary Statistics
 </div><br>
 
 <div class="container">
-    <a class="btn btn-primary btn-sm" href="{% url 'core:summary_graph' %}">Graph cell count</a>
+    <a class="btn btn-primary btn-sm" href="{% url 'dlp:summary_graph' %}">Graph cell count</a>
 </div>
 
 
