--- a/core/templates/core/lane_delete.html
+++ b/core/templates/core/lane_delete.html
@@ -8,10 +8,10 @@ Delete lane
 {% block body %}
 <div class="container graybg">
     <h5>Are you sure you want to delete lane <b>{{lane.flow_cell_id}}</b>?</h5><br>
-    <form action="{% url 'core:lane_delete' pk=pk %}" method="POST">
+    <form action="{% url library_type|add:':lane_delete' pk=pk %}" method="POST">
         {% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
-        <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_detail' pk=sequencing_id %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_detail' pk=sequencing_id %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
