--- a/core/templates/core/library_create.html
+++ b/core/templates/core/library_create.html
@@ -7,7 +7,7 @@ Create Library
 
 {% block body %}
 <div class="container graybg">
-    <form action="{% url 'core:library_create' %}" method="POST", enctype="multipart/form-data">
+    <form action="{% url library_type|add:':library_create' %}" method="POST", enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset>
             <legend>Library Information</legend>
@@ -47,6 +47,7 @@ Create Library
                 </thead>
             </table>
          </fieldset><br>
+         {% if library_type == 'dlp' %}
          <fieldset>
             <legend>Sublibrary Information</legend>
             <table class="table-condensed">
@@ -55,6 +56,7 @@ Create Library
                 </thead>
             </table>
          </fieldset><br>
+         {% endif %}
          <fieldset>
             <legend>Library Sample Details</legend>
             <table class="table-condensed">
@@ -80,7 +82,7 @@ Create Library
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
-        <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':library_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
