--- a/core/templates/core/library_create_from_sample.html
+++ b/core/templates/core/library_create_from_sample.html
@@ -7,7 +7,7 @@ Create Library
 
 {% block body %}
 <div class="container graybg">
-    <form action="{% url 'core:library_create' %}" method="POST", enctype="multipart/form-data">
+    <form action="{% url library_type|add:':library_create' %}" method="POST", enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset>
             <legend>Library Information</legend>
@@ -81,7 +81,7 @@ Create Library
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
-        <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':library_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
