--- a/core/templates/core/library_delete.html
+++ b/core/templates/core/library_delete.html
@@ -17,10 +17,10 @@ Delete Library
     {% else %}
     <h5><i class="text-warning">There are no related items to this object!</i></h5><br>
     {% endif %}
-    <form action="{% url 'core:library_delete' pk=pk %}" method="POST">
+    <form action="{% url library_type|add:':library_delete' pk=pk %}" method="POST">
         {% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
-        <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':library_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
