--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -11,7 +11,12 @@ Library Details
     <table class="table-condensed">
         <tr>
             <th id="thid"> Sample:</th>
-            <td id="tdid" class="notes"><a href="{{library.sample.get_absolute_url}}">{{library.sample}}</a></td></tr>
+            <td id="tdid" class="notes"><a href="{{library.sample.get_absolute_url}}">{{library.sample}}</a></td>
+        </tr>
+        <tr>
+            <th id="thid"> Number of plates:</th>
+            <td id="tdid" class="notes">{{library.plate_set.count}}</td>
+        </tr>
         {% for field, value in library.get_field_values.items %}
         <tr>
             <th id="thid">{{field}}:</th>
@@ -37,18 +42,72 @@ Library Details
     </table>
 </div><br>
 <!-- end of Meta Information -->
+
+{% if library_type == 'pbal' %}
+<!-- Plates -->
+<div class="container">
+    <h4>Plate Details</h4>
+    {% if library.plate_set %}
+    <div class="table">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Jira ticket</th>
+                    <th>Plate status</th>
+                    <th>Plate location</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for plate in library.plate_set.all %}
+                <tr>
+                    <td>{{plate.jira_ticket}}</td>
+                    <td>{{plate.plate_status}}</td>
+                    <td>{{plate.plate_location}}</td>
+                    <td>
+                        <a href="{% url 'pbal:plate_update' pk=plate.pk %}"><i class="fa fa-pencil" style="color:orange;"></i> update</a>
+                        <a href="{% url 'pbal:plate_delete' pk=plate.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>   
+    {% else %}
+    <h5><i class="text-warning">There are no plates for this library!</i></h5>
+    {% endif %}
+    <a href="{% url 'pbal:plate_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Plate</a></p>
+</div><br>
+<!-- end of Plates -->
+{% endif %}
         
 <!-- Library Sample Detail -->
 <div class="container">
     <h4>Library Sample Detail</h4>
     {% if library.has_library_sample_detail %}
     <table class="table-condensed">
-        {% for field, value in library.librarysampledetail.get_field_values.items %}
-        <tr>
-            <th id="thid">{{field}}:</th>
-            <td id="tdid" class="notes">{{value}}</td>
-        </tr>
-        {% endfor %}
+        {% if library_type == 'dlp' %}
+            {% for field, value in library.librarysampledetail.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% elif library_type == 'pbal' %}
+            {% for field, value in library.pballibrarysampledetail.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% elif library_type == 'tenx' %}
+            {% for field, value in library.tenxlibrarysampledetail.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% endif %}
     </table>
     {% else %}
     <h5><i class="text-warning">There is no library sample detail for this library!</i></h5>
@@ -61,12 +120,28 @@ Library Details
     <h4>Library Construction Information</h4>
     {% if library.has_library_construction_information %}
     <table class="table-condensed">
-        {% for field, value in library.libraryconstructioninformation.get_field_values.items %}
-        <tr>
-            <th id="thid">{{field}}:</th>
-            <td id="tdid" class="notes">{{value}}</td>
-        </tr>
-        {% endfor %}
+        {% if library_type == 'dlp' %}
+            {% for field, value in library.libraryconstructioninformation.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% elif library_type == 'pbal' %}
+            {% for field, value in library.pballibraryconstructioninformation.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% elif library_type == 'tenx' %}
+            {% for field, value in library.tenxlibraryconstructioninformation.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% endif %}
     </table>
     {% else %}
     <h5><i class="text-warning">There is no library construction information for this library!</i></h5>
@@ -79,32 +154,48 @@ Library Details
     <h4>Library Quantification and Storage</h4>
     {% if library.has_library_quantification_and_storage %}
     <table class="table-condensed">
-        <tr>
-            <th id="thid">Library location:</th>
-            <td id="tdid">{{library.libraryquantificationandstorage.library_location}}</td>
-        </tr>
-        {% for field, value in library.libraryquantificationandstorage.get_field_values.items %}
-        <tr>
-            {% if field == "Agilent bioanalyzer xad file" and value %}
-            <th id="thid">{{field}}:</th>
-            <td id="tdid">
-                <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_xad.url}}">
-                    {{value}}
-                </a>
-            </td>
-            {% elif field == "Agilent bioanalyzer image file" and value %}
-            <th id="thid">{{field}}:</th>
-            <td id="tdid">
-                <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_image.url}}">
-                    {{value}}
-                </a>
-            </td>
-            {% else %}
-            <th id="thid">{{field}}:</th>
-            <td id="tdid" class="notes">{{value}}</td>
-            {% endif %}
-        </tr>
-        {% endfor %}
+        {% if library_type == 'dlp' %}
+            <tr>
+                <th id="thid">Library location:</th>
+                <td id="tdid">{{library.libraryquantificationandstorage.library_location}}</td>
+            </tr>
+            {% for field, value in library.libraryquantificationandstorage.get_field_values.items %}
+            <tr>
+                {% if field == "Agilent bioanalyzer xad file" and value %}
+                <th id="thid">{{field}}:</th>
+                <td id="tdid">
+                    <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_xad.url}}">
+                        {{value}}
+                    </a>
+                </td>
+                {% elif field == "Agilent bioanalyzer image file" and value %}
+                <th id="thid">{{field}}:</th>
+                <td id="tdid">
+                    <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_image.url}}">
+                        {{value}}
+                    </a>
+                </td>
+                {% else %}
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+                {% endif %}
+            </tr>
+            {% endfor %}
+        {% elif library_type == 'pbal' %}
+            {% for field, value in library.pballibraryquantificationandstorage.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% elif library_type == 'tenx' %}
+            {% for field, value in library.tenxlibraryquantificationandstorage.get_field_values.items %}
+            <tr>
+                <th id="thid">{{field}}:</th>
+                <td id="tdid" class="notes">{{value}}</td>
+            </tr>
+            {% endfor %}
+        {% endif %}
     </table>
     {% else %}
     <h5><i class="text-warning">There is no library quantification and storage for this library!</i></h5>
@@ -113,6 +204,7 @@ Library Details
 <!-- end of Library Quantification and Storage -->
 
 <!-- Experimental Condition Metadata -->
+{% if library_type == 'dlp' %}
 <div class="container">
     <h4>Experimental Condition Metadata</h4>
         {% if library.chipregion_set.all %}
@@ -142,10 +234,12 @@ Library Details
     <h5><i class="text-warning">There is no condition metadata for library!</i></h5>
         {% endif %}
 </div><br>
+{% endif %}
 <!-- endof Experimental Condition Metadata -->
 
 
 <!-- Sublibrary Information -->
+{% if library_type == 'dlp' %}
 <div class="container">
     <h4>Sublibrary Information</h4>
     {% if library.sublibraryinformation_set.all %}
@@ -177,6 +271,7 @@ Library Details
     <h5><i class="text-warning">There is no sublibrary information for this library!</i></h5>
     {% endif %}
 </div><br>
+{% endif %}
 <!-- end of Sublibrary Information -->
 
 <!-- Sequencing Information -->
@@ -206,13 +301,62 @@ Library Details
                 {% endfor %}
             </tbody>
         </table>
-    </div>    
+    </div>
+    {% elif library.pbalsequencing_set.all %}
+    <div class="table">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Sample ID</th>
+                    <th>Adapter</th>
+                    <th>Sequencing instrument</th>
+                    <th>Submission date</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for sequencing in library.pbalsequencing_set.all %}
+                <tr>
+                    <td><a href="{{sequencing.get_absolute_url}}">{{sequencing.library.sample.sample_id}}</a></td>
+                    <td>{{sequencing.adapter}}</td>
+                    <td>{{sequencing.get_sequencing_instrument_display}}</td>
+                    <td>{{sequencing.submission_date}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% elif library.tenxsequencing_set.all %}
+    <div class="table">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Sample ID</th>
+                    <th>Adapter</th>
+                    <th>Sequencing instrument</th>
+                    <th>Submission date</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for sequencing in library.tenxsequencing_set.all %}
+                <tr>
+                    <td><a href="{{sequencing.get_absolute_url}}">{{sequencing.library.sample.sample_id}}</a></td>
+                    <td>{{sequencing.adapter}}</td>
+                    <td>{{sequencing.get_sequencing_instrument_display}}</td>
+                    <td>{{sequencing.submission_date}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% else %}
     <h5><i class="text-warning">There is no sequencing information for this library!</i></h5>
     {% endif %}
-    <a href="{% url 'core:sequencing_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Sequencing</a></p>
+    <a href="{% url library_type|add:':sequencing_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Sequencing</a></p>
 </div><br>
+<!-- end of Sequencing Information -->
+
 <!-- Analysis Information -->
+{% if library_type == 'dlp' %}
 <div class="container">
     <h4>Analysis Information</h4>
     {% if analyses %}
@@ -245,20 +389,15 @@ Library Details
     {% endif %}
     <a href="{% url 'sisyphus:analysisinformation_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Analysis </a></p>
 </div>
+{% endif %}
 <!-- end of Analysis Information -->
-
-<!-- end of Sequencing Information -->
 
 <!-- footer bottons -->
 <div class="container" style="margin-bottom:5px;">
-    <a class="btn btn-warning btn-sm" style="float:left; margin:5px;" href="{% url 'core:library_update' pk=library.pk %}">Edit</a>
-    <a class="btn btn-danger btn-sm" style="float:left; margin:5px;" href="{% url 'core:library_delete' pk=library.pk %}">Delete</a>
-    <a style="float:right; margin:5px;" href="{% url 'core:library_list' %}">List of libraries</a>
+    <a class="btn btn-warning btn-sm" style="float:left; margin:5px;" href="{% url library_type|add:':library_update' pk=library.pk %}">Edit</a>
+    <a class="btn btn-danger btn-sm" style="float:left; margin:5px;" href="{% url library_type|add:':library_delete' pk=library.pk %}">Delete</a>
+    <a style="float:right; margin:5px;" href="{% url library_type|add:':library_list' %}">List of libraries</a>
 </div><br>
 <!-- end of footer bottons -->
 
 {% endblock %}
-
-
-
-    
