--- a/core/templates/core/library_update.html
+++ b/core/templates/core/library_update.html
@@ -7,7 +7,7 @@ Edit Library
 
 {% block body %}
 <div class="container graybg">
-    <form action="{% url 'core:library_update' pk=pk %}" method="POST" enctype="multipart/form-data">
+    <form action="{% url library_type|add:':library_update' pk=pk %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset>
             <legend>Library Information</legend>
@@ -52,6 +52,7 @@ Edit Library
                 </thead>
             </table>
          </fieldset><br>
+         {% if library_type == 'dlp' %}
          <fieldset>
             <legend>Sublibrary Information</legend>
             <table class="table-condensed">
@@ -60,6 +61,7 @@ Edit Library
                 </thead>
             </table>
          </fieldset><br>
+         {% endif %}
          <fieldset>
             <legend>Library Sample Details</legend>
             <table class="table-condensed">
@@ -85,7 +87,7 @@ Edit Library
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="update" value="Update">
-        <a class="btn btn-default btn-sm" href="{% url 'core:library_detail' pk=pk %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':library_detail' pk=pk %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
