--- a/core/templates/core/library_list.html
+++ b/core/templates/core/library_list.html
@@ -12,7 +12,7 @@ List of Libraries
 </div>
 <div class="container" style="background-color:#F5F5F5;">
     <div class="table-responsive">
-        <table id="datatable" class="table table-striped">
+        <table id="lib_datatable" class="table table-striped">
             <thead>
                 <tr>
                     {% if library_type == 'dlp' %}
@@ -41,7 +41,7 @@ List of Libraries
                     {% if library_type == 'dlp' or library_type == 'tenx' %}
                     <th>#Sublibraries</th>
                     {% endif %}
-                    <th>Sequenced</th>
+                    <th class="sequenced">Sequenced</th>
                     <th>Result</th>
                 </tr>
             </thead>
@@ -108,5 +108,25 @@ List of Libraries
         </table>
     </div>
 </div>
+
+<script type="text/javascript">
+    $.fn.dataTable.ext.type.order['sequenced-pre'] = function ( d ) {
+        switch ( d ) {
+            case '<i class="fa fa-check" aria-hidden="true" style="color:green;" title="Sequenced">': return 1;
+            case '<i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange" title="Will sequence"></i>': return 2;
+            case '<i class="fa fa-times" aria-hidden="true" style="color:red" title="Will not sequence"></i>': return 3;
+            case '': return 4;
+        }
+        return 0;
+    };
+    $(document).ready(function() {
+        $("#lib_datatable").DataTable({
+            "columnDefs": [ {
+                "type": "sequenced",
+                "targets": "sequenced"
+            } ]
+        });
+    });
+</script>
 
 {% endblock %}
