KRONOS-326, KRONOS-420: model renames and additional fixes for PBAL and 10X

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -79,7 +79,7 @@ Main
     </div>
 </div>
 <br/><div class="container" style="border:solid 1px #E0E0E0; border-radius: 3px;">
-    <a style="text-decoration: none;" href="#10x_collapse" data-toggle="collapse"><h4>10X Genomics</h4></a>
+    <a style="text-decoration: none;" href="#10x_collapse" data-toggle="collapse"><h4>10x Genomics</h4></a>
     <div id="10x_collapse" class="collapse in">
         <table class="table-striped" style="width:100%;">
             <tbody>
