--- a/core/templates/core/library_delete.html
+++ b/core/templates/core/library_delete.html
@@ -8,9 +8,21 @@ Delete Library
 {% block body %}
 <div class="container graybg">
     <h5>Are you sure you want to detete library <i class="emph">{{library}}</i>? All of the following related items will be deleted too:</h5>
-    {% if library.sequencing_set.all %}
+    {% if library.dlpsequencing_set.all %}
     <ul style="list-style-type:square">
-    {% for sequencing in library.sequencing_set.all %}
+    {% for sequencing in library.dlpsequencing_set.all %}
+    <li><a href="{{sequencing.get_absolute_url}}">{{sequencing}}</a></li>
+    {% endfor %}
+    </ul><br>
+    {% elif library.pbalsequencing_set.all %}
+    <ul style="list-style-type:square">
+    {% for sequencing in library.pbalsequencing_set.all %}
+    <li><a href="{{sequencing.get_absolute_url}}">{{sequencing}}</a></li>
+    {% endfor %}
+    </ul><br>
+    {% elif library.tenxsequencing_set.all %}
+    <ul style="list-style-type:square">
+    {% for sequencing in library.tenxsequencing_set.all %}
     <li><a href="{{sequencing.get_absolute_url}}">{{sequencing}}</a></li>
     {% endfor %}
     </ul><br>
