--- a/core/templates/core/library_list.html
+++ b/core/templates/core/library_list.html
@@ -25,7 +25,11 @@ List of Libraries
                     <th>Number of plates</th>
                     {% endif %}
                     <th>Sample Spot Date</th>
+                    {% if library_type == 'dlp' %}
                     <th>Library Prep Date</th>
+                    {% else %}
+                    <th>Submission Date</th>
+                    {% endif %}
                     <th>Description</th>
                     {% if library_type == 'dlp' or library_type == 'tenx' %}
                     <th>JIRA Ticket</th>
@@ -53,19 +57,17 @@ List of Libraries
                     </a></td>
                     <td>{{library.sample.sample_id}}</td>
                     {% if library_type == 'pbal' %}
-                    <td>
-                        {{library.plate_set.count}}
-                    </td>
+                    <td>{{library.plate_set.count}}</td>
                     {% endif %}
                     {% if library_type == 'dlp' %}
-                    <td>{{library.librarysampledetail.sample_spot_date|date:"M j, Y"}}</td>
-                    <td>{{library.libraryconstructioninformation.library_prep_date|date:"M j, Y"}}</td>
+                    <td>{{library.dlplibrarysampledetail.sample_spot_date|date:"M j, Y"}}</td>
+                    <td>{{library.dlplibraryconstructioninformation.library_prep_date|date:"M j, Y"}}</td>
                     {% elif library_type == 'pbal' %}
                     <td>{{library.pballibrarysampledetail.sample_spot_date|date:"M j, Y"}}</td>
-                    <td>{{library.pballibraryconstructioninformation.library_prep_date|date:"M j, Y"}}</td>
+                    <td>{{library.pballibraryconstructioninformation.submission_date|date:"M j, Y"}}</td>
                     {% elif library_type == 'tenx' %}
                     <td>{{library.tenxlibrarysampledetail.sample_prep_date|date:"M j, Y"}}</td>
-                    <td>{{library.tenxlibraryconstructioninformation.library_prep_date|date:"M j, Y"}}</td>
+                    <td>{{library.tenxlibraryconstructioninformation.submission_date|date:"M j, Y"}}</td>
                     {% endif %}
                     <td>{{library.description}}</td>
                     {% if library_type == 'dlp' or library_type == 'tenx' %}
@@ -77,16 +79,24 @@ List of Libraries
                         {% endfor %}
                     </td>
                     {% if library_type == 'dlp' %}
-                    <td>{{library.libraryquantificationandstorage.library_location}}</td>
+                    <td>{{library.dlplibraryquantificationandstorage.library_location}}</td>
                     {% endif %}
                     {% if library_type == 'dlp' or library_type == 'tenx' %}
                     <td style="text-align:center;">{{library.num_sublibraries}}</td>
                     {% endif %}
                     {% if library.is_sequenced %}
                     <td style="text-align:center;"><i class="fa fa-check" aria-hidden="true" style="color:green;" title="Sequenced"></i></td>
-                    {% elif library.libraryquantificationandstorage.qc_check == 'P' %}
+                    {% elif library.dlplibraryquantificationandstorage.qc_check == 'P' %}
                     <td style="text-align:center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange" title="Will sequence"></i></td>
-                    {% elif library.libraryquantificationandstorage.qc_check == 'N' %}
+                    {% elif library.dlplibraryquantificationandstorage.qc_check == 'N' %}
+                    <td style="text-align:center"><i class="fa fa-times" aria-hidden="true" style="color:red" title="Will not sequence"></i></td>
+                    {% elif library.pballibraryquantificationandstorage.qc_check == 'P' %}
+                    <td style="text-align:center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange" title="Will sequence"></i></td>
+                    {% elif library.pballibraryquantificationandstorage.qc_check == 'N' %}
+                    <td style="text-align:center"><i class="fa fa-times" aria-hidden="true" style="color:red" title="Will not sequence"></i></td>
+                    {% elif library.tenxlibraryquantificationandstorage.qc_check == 'P' %}
+                    <td style="text-align:center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange" title="Will sequence"></i></td>
+                    {% elif library.tenxlibraryquantificationandstorage.qc_check == 'N' %}
                     <td style="text-align:center"><i class="fa fa-times" aria-hidden="true" style="color:red" title="Will not sequence"></i></td>
                     {% else %}
                     <td style="text-align:center"></td>
