--- a/core/templates/core/sample_detail.html
+++ b/core/templates/core/sample_detail.html
@@ -54,7 +54,7 @@ Sample Details
                 {% for library in sample.dlplibrary_set.all %}
                 <tr>
                     <td><a href="{{library.get_absolute_url}}">{{library.pool_id}}</a></td>
-                    <td>{{library.jira_ticket}}</td>
+                    <td><a href="https://www.bcgsc.ca/jira/browse/{{library.jira_ticket}}">{{library.jira_ticket}}</a></td>
                     <td>{{library.description}}</td>
                 </tr>
                 {% endfor %}
@@ -96,7 +96,7 @@ Sample Details
                 {% for library in sample.tenxlibrary_set.all %}
                 <tr>
                     <td><a href="{{library.get_absolute_url}}">{{library.id}}</a></td>
-                    <td>{{library.jira_ticket}}</td>
+                    <td><a href="https://www.bcgsc.ca/jira/browse/{{library.jira_ticket}}">{{library.jira_ticket}}</a></td>
                     <td>{{library.description}}</td>
                 </tr>
                 {% endfor %}
