--- a/sisyphus/templates/sisyphus/dlpanalysisinformation_detail.html
+++ b/sisyphus/templates/sisyphus/dlpanalysisinformation_detail.html
@@ -14,7 +14,7 @@
         </tr>
         <tr>
             <th id="thid">Analysis ID:</th>
-            <td id="tdid">{{ object }}</td>
+            <td id="tdid">{{ object.id }}</td>
         </tr>
         {% for field, value in object.get_field_values.items %}
         <tr>
