KRONOS-483: Inventory Table for DLP and 10x data

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -20,6 +20,9 @@ Main
                     </td>
                 </tr>
                 <tr>
+                    <td><a href="{% url 'core:inventory' %}">Inventory</a></td><td></td>
+                </tr>
+                <tr>
                     <td><a href="{% url 'core:project_list' %}">Projects</a></td><td></td>
                 </tr>    
             </tbody>
